abstract SDL_AudioSpec and SDL_AudioFormat into intermediary structs, hiding all SDL-specific code from public consumption

--- a/insound/CMakeLists.txt
+++ b/insound/CMakeLists.txt
@@ -35,7 +35,12 @@ add_library(insound
     mathf.h
     Command.h
     effects/VolumeEffect.cpp
-    effects/VolumeEffect.h)
+    effects/VolumeEffect.h
+    SampleFormat.cpp
+    SampleFormat.h
+    AudioSpec.cpp
+    AudioSpec.h
+)
 
 target_link_libraries(insound PRIVATE SDL2::SDL2-static)
 target_include_directories(insound PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
