--- a/insound/CMakeLists.txt
+++ b/insound/CMakeLists.txt
@@ -3,8 +3,8 @@ project(insound)
 if (NOT TARGET SDL2::SDL2-static)
     include(FetchContent)
     FetchContent_Declare(SDL2
-        GIT_REPOSITORY https://github.com/libsdl-org/SDL.git
-        GIT_TAG        fb1497566c5a05e2babdcf45ef0ab5c7cca2c4ae
+        GIT_REPOSITORY https://github.com/tadashibashi/SDL.git
+        GIT_TAG        78b6ce7e0c524422ea5deb4041fada5b60ca2585
     )
     FetchContent_MakeAvailable(SDL2)
 
@@ -14,37 +14,37 @@ if (NOT TARGET SDL2::SDL2-static)
 endif()
 
 add_library(insound
+    AudioSpec.h
+    Bus.cpp
+    Bus.h
+    Command.h
+    Effect.cpp
+    Effect.h
+    effects/DelayEffect.cpp
+    effects/DelayEffect.h
+    effects/PanEffect.cpp
+    effects/PanEffect.h
+    effects/VolumeEffect.cpp
+    effects/VolumeEffect.h
     Engine.cpp
     Engine.h
-    SoundBuffer.cpp
-    SoundBuffer.h
+    error.cpp
+    error.h
+    mathf.cpp
+    mathf.h
     PCMSource.cpp
     PCMSource.h
     Pool.h
-    Bus.cpp
-    Bus.h
-    SoundSource.h
-    error.cpp
-    error.h
-    Effect.cpp
-    Effect.h
-    effects/PanEffect.cpp
-    effects/PanEffect.h
-    SoundSource.cpp
-    mathf.cpp
-    mathf.h
-    Command.h
-    effects/VolumeEffect.cpp
-    effects/VolumeEffect.h
-    SampleFormat.cpp
-    SampleFormat.h
-    AudioSpec.cpp
-    AudioSpec.h
     private/SdlAudioGuard.cpp
     private/SdlAudioGuard.h
-    SourceHandle.h
-    effects/DelayEffect.cpp
-    effects/DelayEffect.h
+    SampleFormat.cpp
+    SampleFormat.h
+    SoundBuffer.cpp
+    SoundBuffer.h
+    SoundSource.cpp
+    SoundSource.h
+    SourceRef.h
+    SourceRefFwd.h
 )
 
 target_link_libraries(insound PRIVATE SDL2::SDL2-static)
@@ -59,4 +59,6 @@ if (EMSCRIPTEN)
     target_link_options(insound PUBLIC
         -sALLOW_MEMORY_GROWTH=1
     )
+else()
+    target_compile_definitions(insound PRIVATE -DINSOUND_THREADING=1)
 endif()
