--- a/insound/core/CMakeLists.txt
+++ b/insound/core/CMakeLists.txt
@@ -207,11 +207,11 @@ if (EMSCRIPTEN)
     endif()
 
     if (INSOUND_DEBUG)
-        target_link_options(insound PUBLIC -O0 -g -gsource-map)
-        target_compile_options(insound PUBLIC -O0 -g -gsource-map)
+        target_link_options(insound PUBLIC -O0 -g -g3 -gsource-map)
+        target_compile_options(insound PUBLIC -O0 -g -g3 -gsource-map)
     else()
-        target_link_options(insound PUBLIC -Ofast)
-        target_compile_options(insound PUBLIC -Ofast)
+        target_link_options(insound PUBLIC -Ofast -flto)
+        target_compile_options(insound PUBLIC -Ofast -flto)
     endif()
 endif()
 
