--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,59 +20,40 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 # Check if this is the root project
 set(INSOUND_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE STRING "" FORCE)
-
 if (CMAKE_SOURCE_DIR STREQUAL INSOUND_ROOT_DIR)
     set(INSOUND_IS_ROOT TRUE)
 else()
     set(INSOUND_IS_ROOT FALSE)
 endif()
 
-
 # Insound Audio Engine options
-# Audio file decoder
-option(INSOUND_DECODE_VORBIS  "Include ogg vorbis file decoding in build."           ON)
-option(INSOUND_DECODE_MP3     "Include mp3 file decoding in build."                  ON)
-option(INSOUND_DECODE_FLAC    "Include flac file decoding in build."                 ON)
-option(INSOUND_DECODE_GME     "Include classic game emu decoding in build."          ON)
+option(INSOUND_BACKEND_SDL2      "Enable SDL2 backend"                                  ON  )
+option(INSOUND_BACKEND_SDL3      "Enable SDL3 backend"                                  OFF )
 
-option(INSOUND_LOGGING        "Enable logging in release mode"                       ON)
+# Audio file decoders
+option(INSOUND_DECODE_VORBIS     "Include ogg vorbis file decoding in build."           ON )
+option(INSOUND_DECODE_MP3        "Include mp3 file decoding in build."                  ON )
+option(INSOUND_DECODE_FLAC       "Include flac file decoding in build."                 ON )
+option(INSOUND_DECODE_GME        "Include classic game emu decoding in build."          ON )
 
-option(INSOUND_NO_PTHREAD     "Turn pthreads off. (Only affects Emscripten builds)"  OFF)
+option(INSOUND_LOGGING           "Enable logging in release mode"                       ON )
 
-option(INSOUND_BUILD_TESTS    "Include insound test targets."                        ${INSOUND_IS_ROOT})
-option(INSOUND_BUILD_EXAMPLES "Include insound example project targets."             ${INSOUND_IS_ROOT})
+option(INSOUND_NO_PTHREAD        "Turn pthreads off. (Only affects Emscripten builds)"  OFF)
 
-option(INSOUND_CPU_INTRINSICS "Turn on CPU intrinsics"                               ON)
+option(INSOUND_BUILD_TESTS       "Include insound test targets."                        ${INSOUND_IS_ROOT})
+option(INSOUND_BUILD_EXAMPLES    "Include insound example project targets."             ${INSOUND_IS_ROOT})
+
+option(INSOUND_CPU_INTRINSICS    "Turn on CPU intrinsics"                               ON )
 
 if (NOT EMSCRIPTEN)
     set (INSOUND_NO_PTHREAD OFF CACHE BOOL "Non-emscripten platforms must have pthreads on" FORCE)
-endif()
-
-if (APPLE)
-    set(CMAKE_OSX_ARCHITECTURES "x86_64;arm64" CACHE STRING "")
+else()
+    # Force SDL2 backend on Emscripten compilations: there are some issues with miniaudio's implementation.
+    set(INSOUND_BACKEND_SDL2      ON  CACHE BOOL "" FORCE)
+    set(INSOUND_BACKEND_MINIAUDIO OFF CACHE BOOL "" FORCE)
 endif()
 
 add_subdirectory(insound)
-
-if (INSOUND_BUILD_EXAMPLES)
-    add_subdirectory(sandbox)
-    # Create symlink inside of the Android project
-    if (NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/sandbox/android/app/jni/insound)
-        execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
-            ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/sandbox/android/app/jni/insound
-        )
-    endif()
-endif()
-
 if (INSOUND_BUILD_TESTS)
     add_subdirectory(tests)
-endif()
-
-# Support for Sublime LSP-clangd and VSCode clangd
-if (CMAKE_EXPORT_COMPILE_COMMANDS AND EXISTS ${CMAKE_SOURCE_DIR}/build)
-    cmake_language(DEFER DIRECTORY ${CMAKE_SOURCE_DIR} CALL _end_of_configure())
-    function(_end_of_configure)
-        execute_process(COMMAND ${CMAKE_COMMAND} -E copy
-            ${CMAKE_BINARY_DIR}/compile_commands.json ${CMAKE_SOURCE_DIR}/build/compile_commands.json)
-    endfunction()
 endif()
